# unduler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml  unduler.toml
.github/workflows/: ci.yml  release.yml
crates/unduler/: Cargo.toml
crates/unduler-commit/: Cargo.toml
crates/unduler-commit/src/: lib.rs  parsed.rs  raw.rs
crates/unduler-config/: Cargo.toml
crates/unduler-config/src/: error.rs  lib.rs  loader.rs  schema.rs
crates/unduler-core/: Cargo.toml
crates/unduler-core/src/: error.rs  files.rs  lib.rs  pipeline.rs  release.rs  version.rs
crates/unduler-git/: Cargo.toml
crates/unduler-git/src/: error.rs  lib.rs  repository.rs
crates/unduler-plugin/: Cargo.toml
crates/unduler-plugin-manager/: Cargo.toml
crates/unduler-plugin-manager/src/: discovery.rs  error.rs  lib.rs  registry.rs  storage.rs
crates/unduler-plugin-sdk/: Cargo.toml
crates/unduler-plugin-sdk/src/: lib.rs
crates/unduler-plugin-sdk/wit/: bumper.wit  hook.wit  types.wit  world.wit
crates/unduler-plugin/src/: context.rs  error.rs  lib.rs
crates/unduler-plugin/src/traits/: bumper.rs  formatter.rs  hook.rs  mod.rs  parser.rs
crates/unduler-plugin/wit/: formatter.wit  parser.wit
crates/unduler-wasm-runtime/: Cargo.toml
crates/unduler-wasm-runtime/src/: bumper.rs  engine.rs  error.rs  formatter.rs  hook.rs  lib.rs  parser.rs
crates/unduler-wasm-runtime/tests/: bumper_integration.rs  parser_integration.rs
crates/unduler/src/: cli.rs  main.rs
crates/unduler/src/commands/: bump.rs  changelog.rs  init.rs  mod.rs  plugin.rs  release.rs
crates/unduler/tests/: cli_integration.rs
examples/plugins/: README.md
examples/plugins/bumper-semver-wasm/: Cargo.toml
examples/plugins/bumper-semver-wasm/src/: lib.rs
examples/plugins/parser-conventional-wasm/: Cargo.toml
examples/plugins/parser-conventional-wasm/src/: lib.rs
plugins/bumper-semver/: Cargo.toml
plugins/bumper-semver/src/: lib.rs
plugins/formatter-keepachangelog/: Cargo.toml
plugins/formatter-keepachangelog/src/: lib.rs
plugins/hook-cargo/: Cargo.toml
plugins/hook-cargo/src/: lib.rs
plugins/hook-github-release/: Cargo.toml
plugins/hook-github-release/src/: lib.rs
plugins/hook-npm/: Cargo.toml
plugins/hook-npm/src/: lib.rs
plugins/parser-conventional/: Cargo.toml
plugins/parser-conventional/src/: lib.rs
plugins/parser-gitmoji/: Cargo.toml
plugins/parser-gitmoji/src/: lib.rs
plugins/parser-regex/: Cargo.toml
plugins/parser-regex/src/: lib.rs
test-plugins/: bumper-semver.wasm  parser-conventional.wasm
