[package]
name = "unduler-commit"
description = "Commit types for Unduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
