[package]
name = "unduler-plugin-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Plugin manager for Unduler - handles discovery, installation, and loading"

[dependencies]
unduler-wasm-runtime.workspace = true
unduler-plugin.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
semver.workspace = true
chrono.workspace = true

# HTTP client for crates.io and GitHub
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Async runtime
tokio.workspace = true

# File system utilities
dirs = "6"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
