[package]
name = "unduler-plugin-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SDK for building Unduler plugins as WebAssembly components"

[dependencies]
wit-bindgen = "0.41"

[lints]
workspace = true
