[package]
name = "unduler-bumper-semver"
description = "SemVer bump strategy plugin for Unduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
unduler-commit.workspace = true
unduler-plugin.workspace = true

semver.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
