[package]
name = "unduler-hook-github-release"
description = "GitHub Release hook plugin for Unduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
unduler-plugin.workspace = true

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
semver.workspace = true

[lints]
workspace = true
