[package]
name = "unduler-hook-npm"
description = "npm/Node.js hook plugin for Unduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
unduler-plugin.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
semver.workspace = true

[lints]
workspace = true
