[package]
name = "unduler-parser-regex"
description = "Custom regex parser plugin for Unduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
unduler-commit.workspace = true
unduler-plugin.workspace = true

regex.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
chrono.workspace = true

[lints]
workspace = true
